--- a/seven_improved.modifications.css
+++ b/seven_improved.modifications.css
@@ -25,4 +25,8 @@ form.monospace-textarea textarea {
   font-family: monospace;
   font-size: 1.5em;
 }
+/* Remove left margin on primary buttons in certain forms. */
+form.primary-buttons-remove-left-margin .button--primary {
+  margin-left: 0;
+}
 /* Various elements end */
