--- a/seven_improved.modifications.css
+++ b/seven_improved.modifications.css
@@ -29,4 +29,17 @@ form.monospace-textarea textarea {
 form .button {
   margin-left: 0;
 }
+/* Make all form elements 100% wide on small screens. */
+@media screen and (max-width: 600px) {
+  form .form-item {
+    width: 100%;
+    margin: 0 0 0.5em 0;
+  }
+  .form-actions {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 0.75em;
+  }
+}
 /* Various elements end */
